updates readme added global func to add gravity sink mouse click now adds gravity sink at position attempted to add dampening/inward edgeforce if sink gets too close reduced MAX_GFIELDS for perf as it runs on main thread, and field update algo runs O(n^2)  (needs to be fixed)

--- a/src/style.css
+++ b/src/style.css
@@ -8,4 +8,5 @@ body {
     width: 1920px; 
     height: 1080px; 
     background: black;
+    overflow: hidden;
 }
